<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CyclePana">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:weightSum="2">
                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_date"
                    android:gravity="center"
                    android:background="@drawable/shape2"
                    android:drawableTint="@color/white"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                    android:layout_margin="5dp"/>
                <TextView
                    android:id="@+id/tv_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_type"
                    android:gravity="center"
                    android:background="@drawable/shape2"

                    android:layout_weight="1"
                    android:padding="5dp"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                    android:layout_margin="5dp"/>


            </LinearLayout>
<!--            <include layout="@layout/timer_layout"/>-->
            <RelativeLayout
                android:visibility="gone"
                android:id="@+id/relativeLayout2"
                android:layout_below="@+id/rel_timer"
                android:layout_width="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/btnBetStatus"
                    android:layout_width="match_parent"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:layout_height="30dp"
                    android:background="@drawable/shape2"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="26/06/2019 - FRIDAY - BET OPEN"
                    android:textSize="9dp"
                    android:textColor="@color/white"/>
                <Button
                    android:visibility="gone"
                    android:id="@+id/btnBetType"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:backgroundTint="@color/white"
                    android:background="@drawable/gradient_button"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="30dp"
                    android:layout_alignParentEnd="true"

                    android:text="Select Type"
                    android:textAlignment="center"
                    android:paddingLeft="5dp"
                    android:textSize="12dp"
                    android:textColor="@color/colorPrimaryDark"/>


            </RelativeLayout>
<!--            <include layout="@layout/radio_button_layout"/>-->
            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/relativeLayout4"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    >
                    <TextView
                        android:id="@+id/txtSingleDigit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cycle_pana"
                        android:textColor="@color/colorAccent"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dp"
                        android:textSize="14dp"/>
                    <AutoCompleteTextView
                        android:id="@+id/etSingleDigit"
                        android:layout_width="180dp"
                        android:layout_height="30dp"

                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:textAlignment="center"
                        android:inputType="number"
                        android:maxLength="3"
                        android:textSize="14dp"
                        android:hint="@string/cycle_pana"
                        android:dropDownHeight="300dp"

                        android:textColor="@color/colorAccent"
                        android:completionThreshold="1"
                        android:background="@drawable/shape2"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/relativeLayout5"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_below="@id/relativeLayout4"
                    >
                    <TextView
                        android:id="@+id/txtSinglePoints"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="POINTS    "
                        android:textColor="@color/colorAccent"
                        android:layout_centerVertical="true"
                        android:paddingLeft="10dp"
                        android:textSize="14dp"/>
                    <EditText
                        android:id="@+id/etPoints"
                        android:layout_width="180dp"
                        android:layout_height="30dp"

                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:textAlignment="center"
                        android:inputType="number"

                        android:maxLength="5"
                        android:textSize="14dp"
                        android:hint="Points"
                        android:textColor="@color/colorAccent"
                        android:background="@drawable/shape2"/>


                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/relativeLayout6"
                    android:layout_below="@id/relativeLayout5"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    >
                 <include layout="@layout/add_button"/>


                </RelativeLayout>

            </RelativeLayout>
            <include layout="@layout/allgamelayout"
                />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>

</FrameLayout>